--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</p>
 	
 	<h2>Course Outcomes:</h2>
-	<p>Students completeing this course will be able to:
+	<p>Students completeing this course will be able to: </p>
 	
 	
 	
@@ -47,17 +47,15 @@
 			<li>Identify improperly used mark-up code.</li>
 			<li>Produce modern standards compliant web pages.</li>
 			<li>Deploy web pages to a public server.</li>
-		</ul>
-	</p>
+	</ul>
 
 	<h2>Couse Objectives:</h2>
-	<p>At the conclusion of this course, each successful student will be able to:
+	<p>At the conclusion of this course, each successful student will be able to: </p>
 		<ul>
 			<li>Explain the client and server architecture of the Internet and related web technologies.</li>
 			<li>Use a basic text editor and other software tools to create web pages using HTML, CSS, JavaScript, JQuery, and images.</li>
 			<li>Deploy web pages to a Linux-based web server ussing sftp.</li>
 		</ul>
-	</p>
 	
 </body>
 
